# TFG

./: .gitignore  3.1.1  CMakeLists.txt  INDICE.md  Integracion_API_DOMjudge.md  Liberacion_recursos_limpieza.md  Propiedades_modo_AR.md  README.md  bat.bat  build_windows.bat  buildspec.json  config.json  solo_compilar.bat
MD/: 3.1.2  3.2.1  3.2.2  Arquitectura_del_plugin.md  Carga_gestion_modelos_3D.md  Deteccion_ArUco_calibracion_camara.md  Propiedades_sincronizacion_web.md  Sistema_construccion_ciclo_ejecucion.md
obs-domjudge-ar-overlay/: .gitignore  CMakePresets.json  buildspec.json
obs-domjudge-ar-overlay/Memoria/: TFGTeXiS.aux  TFGTeXiS.bbl  TFGTeXiS.blg  TFGTeXiS.lof  TFGTeXiS.lot  TFGTeXiS.out  TFGTeXiS.tex  TFGTeXiS.toc  biblio.bib
obs-domjudge-ar-overlay/Memoria/Apendices/: appendixA.aux  appendixA.tex  appendixB.aux  appendixB.tex
obs-domjudge-ar-overlay/Memoria/Capitulos/: ConclusionesTrabajoFuturo.aux  ConclusionesTrabajoFuturo.tex  ConclusionsFutureWork.aux  ConclusionsFutureWork.tex  ConcursosProgramacion.tex  ContribucionesPersonales.aux  ContribucionesPersonales.tex  DescripcionTrabajo.aux  DescripcionTrabajo.tex  DescripcionTrabajoConcursosProgramación.aux  DescripcionTrabajoConcursosProgramación.tex  EstadoDeLaCuestion.aux  EstadoDeLaCuestion.tex  Introduccion.tex  Introduction.aux  Introduction.tex  Validacion.aux  Validacion.tex
obs-domjudge-ar-overlay/Memoria/Cascaras/: abstract.aux  agradecimientos.tex  bibliografia.aux  bibliografia.tex  cover.tex  dedicatoria.tex  fin.aux  resumen.aux
obs-domjudge-ar-overlay/Memoria/TeXiS/: TeXiS_toc.aux
obs-domjudge-ar-overlay/Sheila_Jose_TFG/: ANALISIS_MEMORIA.md  MEMORIA_IMAGENES.md  TFGTeXiS.aux  TFGTeXiS.bbl  TFGTeXiS.blg  TFGTeXiS.lof  TFGTeXiS.lot  TFGTeXiS.out  TFGTeXiS.toc  biblio.bib
obs-domjudge-ar-overlay/Sheila_Jose_TFG/Apendices/: appendixA.aux  appendixA.tex  appendixB.aux  appendixB.tex
obs-domjudge-ar-overlay/Sheila_Jose_TFG/Capitulos/: ConclusionesTrabajoFuturo.aux  ConclusionsFutureWork.aux  ConclusionsFutureWork.tex  ConcursosProgramacion.aux  ContribucionesPersonales.aux  DescripcionTrabajo.aux  DescripcionTrabajo.tex  DescripcionTrabajoConcursosProgramación.aux  DescripcionTrabajoConcursosProgramación.tex  (+8 more)
obs-domjudge-ar-overlay/src/: SJ_3DModel.c  aruco_detector.cpp  countdown_clock.h  json_utils.c  main_filter.c  web_sync.c  web_sync.h  yuv2bgra.h
obs-plugintemplate-master/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  marker_mappings.json
obs-plugintemplate-master/Dependencies/Opencv/lib/: OpenCVModules-release.cmake  opencv_aruco460.lib  opencv_aruco460d.lib  opencv_barcode460d.lib  opencv_bgsegm460d.lib  opencv_bioinspired460.lib  opencv_bioinspired460d.lib  opencv_core460.lib  opencv_core460d.lib  opencv_datasets460.lib  opencv_dnn460.lib  opencv_dnn460d.lib  opencv_dnn_objdetect460.lib  opencv_dnn_objdetect460d.lib  opencv_dnn_superres460d.lib  opencv_dpm460.lib  opencv_dpm460d.lib  opencv_face460.lib  opencv_face460d.lib  opencv_features2d460.lib  opencv_features2d460d.lib  opencv_flann460.lib  opencv_fuzzy460d.lib  opencv_gapi460.lib  opencv_gapi460d.lib  opencv_hfs460.lib  opencv_hfs460d.lib  opencv_highgui460.lib  opencv_highgui460d.lib  opencv_imgproc460d.lib  opencv_intensity_transform460.lib  opencv_intensity_transform460d.lib  opencv_ml460.lib  opencv_objdetect460.lib  opencv_objdetect460d.lib  opencv_phase_unwrapping460d.lib  opencv_photo460d.lib  opencv_plot460.lib  opencv_quality460d.lib  opencv_rapid460.lib  (+18 more)
obs-plugintemplate-master/Dependencies/assimp-6.0.2/lib/Release/: assimp-vc143-mt.exp  assimp-vc143-mt.lib  unit.exp  unit.lib
obs-plugintemplate-master/Sheila_Jose_TFG/: TFGTeXiS.aux  TFGTeXiS.bbl  TFGTeXiS.blg  TFGTeXiS.lof  TFGTeXiS.lot  TFGTeXiS.out  TFGTeXiS.tex  TFGTeXiS.toc  biblio.bib
obs-plugintemplate-master/Sheila_Jose_TFG/Apendices/: appendixA.aux  appendixA.tex  appendixB.aux  appendixB.tex  appendixC.aux
obs-plugintemplate-master/Sheila_Jose_TFG/Capitulos/: Capitulo4.aux  Capitulo5.aux  ConclusionesTrabajoFuturo.aux  ConclusionesTrabajoFuturo.tex  ConclusionsFutureWork.aux  ConclusionsFutureWork.tex  ConcursosProgramacion.aux  ConcursosProgramacion.tex  ContribucionesPersonales.aux  ContribucionesPersonales.tex  DescripcionTrabajo.aux  DescripcionTrabajo.tex  DescripcionTrabajoConcursosProgramación.aux  DescripcionTrabajoConcursosProgramación.tex  EstadoDeLaCuestion.aux  EstadoDeLaCuestion.tex  Introduccion.aux  Introduccion.tex  Introduction.aux  Introduction.tex  Validacion.aux  Validacion.tex  fix.py
obs-plugintemplate-master/Sheila_Jose_TFG/Cascaras/: abstract.aux  abstract.tex  agradecimientos.tex  bibliografia.aux  bibliografia.tex  cover.aux  cover.tex  fin.aux  fin.tex  resumen.aux  resumen.tex
obs-plugintemplate-master/Sheila_Jose_TFG/Imagenes/Fuentes/: readme.txt
obs-plugintemplate-master/Sheila_Jose_TFG/TeXiS/: TeXiS_pream.tex  TeXiS_toc.aux
obs-plugintemplate-master/cmake/common/: helpers_common.cmake
obs-plugintemplate-master/data/: marker_mappings.json  team_info_mappings.example.json  time_sync.json
obs-plugintemplate-master/data/calibracion/: calibrate.bat  calibration.yml
obs-plugintemplate-master/data/web/: index.html  script.js  style.css
obs-plugintemplate-master/docs/: AR_OVERLAY_TEAMINFO_SCOREBOARD.md  AR_POSITIONING_TECHNICAL.md  COUNTDOWN_AND_WEB_SYNC.md  DEPENDENCIAS_COUNTDOWN.md  DOCUMENTACION_COMPLETA.md  FIX_AR_OVERLAY_TEXT_RENDERING.md  MEJORAS_SCOREBOARD_UI.md  WEB_SYNC_ES.md
obs-plugintemplate-master/src/: Cubo-plugin.c  Cubo-plugincambios.c  DESCRIPCION_SRC.md  Model3DSource.cpp  Model3DSource.hpp  Model3D_OBS.c  Model3D_OBS.hpp  Pixel_art_effect.cpp  Pixel_art_effect.hpp  SJ_3DModel.c  SJ_3DModel.h  aruco_detector.cpp  aruco_detector.h  countdown_clock.c  countdown_clock.h  cuadrado.c  extraer.py  json_utils.c  json_utils.h  main_filter.c  plugin-main.c  plugin-main.cpp  shader.cpp  shaderEffect.cpp  test.cpp  test.hpp  test2.cpp  test2.hpp  todo_mi_codigo.txt  web_sync.c  web_sync.h  yuv2bgra.cpp  yuv2bgra.h
src/: plugin-main.cpp  test.cpp  test.hpp
(+69 files in other folders)
